--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-config-next": "13.5.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "marked": "^12.0.1",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "pdf-lib": "^1.17.1",
@@ -62,9 +63,10 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
-    "react-quill": "^2.0.0",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
