--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,11 @@
 {
   "presets": [
-    [
-      "next/babel",
-      {
-        "preset-env": {
-          "targets": {
-            "browsers": [">0.3%", "not ie 11", "not dead", "not op_mini all"]
-          }
-        }
+    ["@babel/preset-env", {
+      "targets": {
+        "browsers": [">0.3%", "not dead", "not op_mini all"]
       }
-    ]
-  ]
+    }],
+    "@babel/preset-react"
+  ],
+  "plugins": []
 }
