--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "npm run clean && next build",
+    "vercel-build": "npm run clean && next build",old_space_size=4096 npm run clean && next build",
     "clean": "rm -rf .next"
   },
   "dependencies": {
@@ -81,6 +81,14 @@
   "devDependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5"
-  }
-}
+    "@babel/preset-react": "^7.22.5",
+  }, "cross-env": "^7.0.3",
+  "browserslist": [   "rimraf": "^5.0.1"
+    ">0.2%",  }
+
+
+
+
+
+
+}  ]    "not op_mini all"    "not ie <= 11",    "not dead",}
