--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 legacy-peer-deps=true
 strict-peer-dependencies=false
+node-linker=hoisted
+prefer-offline=true
+engine-strict=false
+auto-install-peers=true
