--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 npm run clean && next build",
+    "vercel-build": "next build",
     "clean": "rimraf .next"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
-    "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -45,7 +44,6 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "babel-loader": "^9.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -84,11 +82,5 @@
     "@babel/preset-react": "^7.22.5",
     "cross-env": "^7.0.3",
     "rimraf": "^5.0.1"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
