--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
-legacy-peer-deps=true
+legacy-peer-deps=false
 strict-peer-dependencies=false
 node-linker=hoisted
 prefer-offline=true
-engine-strict=false
+engine-strict=true
 auto-install-peers=true
+save-exact=true
