--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "sci-ai",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "next build",
-    "clean": "rimraf .next"
+    "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "prebuild": "npm run clean",
+    "pages:build": "next build",
+    "pages:deploy": "wrangler pages deploy .next",
+    "cloudflare:deploy": "npm run build && npm run pages:deploy"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
@@ -81,6 +84,11 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "cross-env": "^7.0.3",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "wrangler": "^3.22.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
