--- a/.npmrc
+++ b/.npmrc
@@ -2,6 +2,6 @@ legacy-peer-deps=false
 strict-peer-dependencies=false
 node-linker=hoisted
 prefer-offline=true
-engine-strict=true
+engine-strict=false
 auto-install-peers=true
 save-exact=true
