--- a/package.json
+++ b/package.json
@@ -90,5 +90,9 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "packageManager": "npm@10.8.3",
+  "volta": {
+    "node": "18.17.0"
   }
 }
