--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prebuild": "npm run clean",
     "pages:build": "next build",
     "pages:deploy": "wrangler pages deploy .next",
-    "cloudflare:deploy": "npm run build && npm run pages:deploy"
+    "cloudflare:deploy": "npm run build && npm run pages:deploy",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
@@ -57,7 +58,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "marked": "^12.0.1",
-    "next": "13.5.1",
+    "next": "13.5.8",
     "next-themes": "^0.3.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.379",
