--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -64,6 +65,7 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.379",
     "postcss": "8.4.30",
+    "prisma": "^6.5.0",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
